# A03

./: .gitattributes  .gitignore  README.md  components.d.ts  db.sqlite3  index.html  package-lock.json  package.json  pyproject.toml  temp-content.txt  tsconfig.json  vite.config.ts  前端模板.md
app/: constant.py  main.py
app/assets/analysis/: color.md
app/assets/cultural_corridor/: generate_case.md  generate_story.md  story_context.md
app/assets/homework/: prompt.md
app/assets/interactive/: activity.md  recommendation.md  scenario.md
app/assets/question_bank/: analyze_mistake.md  generate.md
app/assets/teaching_plan/: convert.md  document.xml.jinja2  generate.md
app/assets/teaching_plan/template/: [Content_Types].xml
app/assets/teaching_plan/template/docProps/: app.xml  core.xml  custom.xml
app/assets/teaching_plan/template/word/: document.xml  endnotes.xml  fontTable.xml  footnotes.xml  numbering.xml  settings.xml  styles.xml  webSettings.xml
app/db/: __init__.py  config.py
app/db/models/: __init__.py  cultural_corridor.py  interactive.py  question.py  student.py  user.py
app/routers/: _depends.py  analysis.py  auth.py  cultural_corridor.py  homework.py  interactive.py  question_bank.py  students.py  style_transfer.py  teaching.py  user.py
app/services/: ai_service.py  analysis.py  cultural_corridor.py  fleep.py  homework.py  interactive.py  question_bank.py  style_transfer.py  teaching_plan.py  utils.py
docs/: 作品换风格重塑-需求说明.md  作品换风格重塑模块接口文档.md  前端模板.md  学生作业信息录入-需求说明.md  接口文档模板.md  智课工坊_设计思路.md
scripts/: docx-to-json.mjs
src/: App.tsx  App.vue  env.d.ts  main.ts  main.tsx  router.ts  shims-vue.d.ts
src/api/: _index.js  case.ts  community.ts  index.ts  interactive.ts  lab.ts  lighthouse.ts  question.ts  resource.ts  teaching.ts  thinking.ts  user.ts
src/assets/: questions.json  resources.json
src/assets/avatars/: index.ts
src/assets/avatars/expert/: index.ts
src/assets/avatars/teacher/: index.ts
src/assets/contactlist/: index.ts
src/assets/datawithmix/: index.ts  美术+历史.graphml  美术+地理.graphml  美术+数学.graphml  美术+生物.graphml  美术+语文.graphml
src/assets/datawithmix/graphs/: index.ts
src/assets/demo/: resources.json
src/assets/demo/Question bank/bank_docx/: question.docx
src/assets/demo/Question bank/bank_json/: question.json
src/assets/demo/lab/: index.ts
src/assets/demo/lab/emotion/: analysis.md  index.ts
src/assets/demo/lab/image/: index.ts
src/assets/demo/lab/video/: index.ts
src/assets/demo/question/: select.json
src/assets/demo/showcase/: index.ts
src/assets/icons/: index.ts
src/assets/lab/emotion/: teacher.txt
src/assets/styles/: element-override.css  global.css
src/components/: DataAnalysis.tsx  DataAnalysis.vue  Home.vue  NotificationDropdown.vue  ResourceCenter.tsx  ResourceCenter.vue  SettingsDropdown.vue  TeacherWorkbench.vue  ThinkingTheater.vue  Workbench.tsx
src/components/DataAnalysis/: index.tsx
src/components/ResourceCenter/: index.tsx
src/components/TeacherWorkbench/: index.tsx
src/components/community/: index.ts
src/components/community/PostCreator/: PostCreationDialog.vue  PostCreationEntry.vue
src/components/community/PostFeed/: FeedHeader.vue  PostCard.vue  PostList.vue
src/components/community/Sidebar/: HotTopics.vue  RecommendedUsers.vue
src/components/home/: ContactList.vue  HotTopics.vue  KnowledgeGraph.vue  OverviewChart.vue  ResourceLibrary.vue  StatsCards.vue  index.ts
src/components/home/Showcase/: HotspotCard.vue  ShowcaseCarousel.vue
src/components/icons/: BoldIcon.vue  ItalicIcon.vue  index.ts
src/components/lab/: ColorEmotionAnalyzer.vue  ColorRadarChart.vue  ImageToVideo.vue  ImageUploader.vue  StyleTransfer.vue  index.ts
src/components/layout/: AppHeader.vue  AppSidebar.vue  BreadCrumb.vue
src/components/lighthouse/: PageHeader.vue  StatCards.vue  index.ts
src/components/lighthouse/dialogs/: AddStudentDialog.vue  AttendanceDialog.vue  ScoreWorkDialog.vue  StudentDetailsDialog.vue  StudentEvaluateDialog.vue
src/components/lighthouse/table/: SearchBar.vue  StudentTable.vue
src/components/resources/: ImageResourceGenerator.vue  ResourceLibrary.vue  ResourceList.vue  VideoResourceGenerator.vue
src/components/workbench/: ArtStyleConverter.vue  InteractiveActivityDesigner.vue  LessonPlanGenerator.vue  TeachingResourceLibrary.vue
src/components/workshop/: AIPaperGenerator.vue  CaseLibrary.vue  InteractionRecommender.vue  LessonPlanForm.vue  LessonPlanGenerator.vue  PaperHistory.vue  PaperPreview.vue  QuestionBank.vue  QuestionDetail.vue  RecentLessons.vue  RecentPlans.vue  RecommendedResources.vue  ThinkingTheater.vue  ToolCards.vue  index.ts
src/components/workshop/case/: CaseCard.vue  CaseDetail.vue  CaseFilters.vue  ContentList.vue  GenerateDialog.vue  StoryCard.vue  StoryDetail.vue  StoryFilters.vue  index.ts
src/components/workshop/question/: PaperPreview.vue  QuestionDetail.vue  index.ts
src/components/workshop/theater/: ActivityCard.vue  ActivityDialog.vue  ActivityList.vue  CreateActivityDialog.vue  CreateScenarioDialog.vue  ScenarioCard.vue  ScenarioDialog.vue  ScenarioList.vue  index.ts
src/hooks/: useNotifications.ts  useResponsive.ts  useSettings.ts
src/layouts/: MainLayout.vue
src/router/: index.ts
src/stores/: userStore.ts
src/types/: resources.ts
src/views/: CommunityView.vue  HomeView.vue  LabView.vue  LighthouseView.vue  LoginView.vue  WorkshopView.vue
vue-project/: index.html  package-lock.json  package.json
vue-project/src/: App.vue  main.ts
vue-project/src/views/: LabView.vue  LighthouseView.vue  WorkshopView.vue
