[project]
name = "lesson-planning-assistant"
version = "0.1.0"
description = "lesson-planning-assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "fleep>=1.0.1",
    "jinja2>=3.1.6",
    "openai>=1.66.5",
    "python-multipart>=0.0.20",
    "sqlalchemy[aiosqlite]>=2.0.39",
    "uvicorn[standard]>=0.34.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true
