[project]
name = "lesson-planning-assistant"
version = "0.1.0"
description = "lesson-planning-assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "fleep>=1.0.1",
    "google-genai>=1.8.0",
    "jinja2>=3.1.6",
    "openai>=1.66.5",
    "pillow>=11.1.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[aiosqlite]>=2.0.39",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
mysql = ["sqlalchemy[aiomysql]>=2.0.39"]
postgres = ["sqlalchemy[postgresql-asyncpg]>=2.0.39"]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "RUF",   # Ruff-specific rules
    "ERA",   # eradicate
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "N",     # PEP8-naming
    "PD",    # pandas-vet
    "PERF",  # Perflint
    "PGH",   # pygrep-hooks
    "TRY",   # tryceratops
    "ASYNC", # flake8-async
    "ANN",   # flake8-annotations
    "S",     # flake8-bandit
    "FBT",   # flake8-boolean-trap
    "A",     # flake8-builtins
    "B",     # flake8-bugbear
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "TCH",   # flake8-type-checking
    "YTT",   # flake8-2020
]
ignore = [
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "ANN201", # missing-return-type-undocumented-public-function
    "ANN202", # missing-return-type-private-function
    "ANN401", # any-type
    "TRY003", # raise-vanilla-args
    "TRY300", # try-consider-else
    "TRY301", # raise-within-try
    "EM102",  # f-string-in-exception
    "COM812", # missing-trailing-comma
    "ERA001", # commented-out-code
    "EM101",  # raw-string-in-exception
    "TID252", # relative-imports
    "ISC001", # single-line-implicit-string-concatenation
    "DTZ005", # call-datetime-now-without-tzinfo
    "S311",   # suspicious-non-cryptographic-random-usage
    "FBT001", # boolean-type-hint-positional-argument
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "dir"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.File"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true
